src/app/css/_deviceContent.scss
/***********************************************************
 * Copyright (c) Microsoft Corporation. All rights reserved.
 * Licensed under the MIT License
 **********************************************************/
@use 'variables' as *;
@use 'mixins' as *;
@use 'themes' as *;

.device-content {
    .device-content-detail {
        display: flex;
        flex-direction: column;
        .form-group {
            .fieldChildren {
                display: flex;
                flex-direction: row;
                width: 100%;
                .ms-Dropdown-container {
                    flex: 1;
                }
                .ms-DatePicker {
                    flex: 1;
                }
                .form-control {
                    flex: 1;
                }
                .form-control {
                    height: 26px;
                    padding: 1px 12px 1px 12px;
                }
                .form-control:disabled {
                    @include form-control-readonly;
                    border: none;
                    height: 32px;
                }
            }
        }
        .each-property {
            margin-bottom: 10px;
        }
        h3 {
            font-size: 20px;
            padding-left: 26px;
        }
    }
}

.ms-Shimmer-container {
    margin-top: 20px;
}

